Files Homework week 1

--- a/HW-WEEK1.ipynb
+++ b/HW-WEEK1.ipynb
@@ -462,35 +462,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "id": "f066c250-32e9-4743-b951-eb2129a56c47",
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_prompt(query, search_results):\n",
     "    prompt_template = \"\"\"\n",
-    "    You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
-    "    Use only the facts from the CONTEXT when answering the QUESTION.\n",
+    "Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+    "Use only the facts from the CONTEXT when answering the QUESTION.\n",
     "\n",
-    "    QUESTION: {question}\n",
+    "QUESTION: {question}\n",
     "\n",
-    "    CONTEXT:\n",
-    "    {context}\n",
-    "    \"\"\".strip()\n",
-    "    \n",
+    "CONTEXT:\n",
+    "{context}\n",
+    "\"\"\".strip()\n",
+    "\n",
+    "    context_template = \"\"\"\n",
+    "Q: {question}\n",
+    "A: {text}\n",
+    "\"\"\".strip()\n",
+    "\n",
     "    context = \"\"\n",
     "\n",
     "    for doc in search_results:\n",
-    "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
-    "            \n",
-    "    prompt = prompt_template.format(question=query, context=context).strip()\n",
+    "        context = context + f\"question: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
     "    \n",
-    "    return prompt"
+    "    prompt = prompt_template.format(question=query, context=context).strip()\n",
+    "    prompt_length = len(prompt)\n",
+    "\n",
+    "    print(\"The length of the prompt is:\", prompt_length)\n",
+    "    return prompt\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "445d0353-75b5-454c-9089-c590fb0b39af",
    "metadata": {},
    "outputs": [
@@ -498,33 +506,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1652\n"
-     ]
-    }
-   ],
-   "source": [
-    "search_results = elastic_search(query)\n",
-    "prompt = build_prompt(query, search_results)\n",
-    "print(len(prompt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "686d0fa0-66ba-4070-add7-d75692be06a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
-      "    Use only the facts from the CONTEXT when answering the QUESTION.\n",
+      "The length of the prompt is: 1462\n",
+      "Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+      "Use only the facts from the CONTEXT when answering the QUESTION.\n",
       "\n",
-      "    QUESTION: How do I execute a command in a running docker container?\n",
+      "QUESTION: How do I execute a command in a running docker container?\n",
       "\n",
-      "    CONTEXT:\n",
-      "    section: 5. Deploying Machine Learning Models\n",
+      "CONTEXT:\n",
       "question: How do I debug a docker container?\n",
       "answer: Launch the container image in interactive mode and overriding the entrypoint, so that it starts a bash command.\n",
       "docker run -it --entrypoint bash <image>\n",
@@ -533,14 +521,12 @@
       "docker exec -it <container-id> bash\n",
       "(Marcos MJD)\n",
       "\n",
-      "section: 5. Deploying Machine Learning Models\n",
       "question: How do I copy files from my local machine to docker container?\n",
       "answer: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
       "To copy a file or directory from your local machine into a running Docker container, you can use the `docker cp command`. The basic syntax is as follows:\n",
       "docker cp /path/to/local/file_or_directory container_id:/path/in/container\n",
       "Hrithik Kumar Advani\n",
       "\n",
-      "section: 5. Deploying Machine Learning Models\n",
       "question: How do I copy files from a different folder into docker container’s working directory?\n",
       "answer: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
       "In the Dockerfile, you can provide the folder containing the files that you want to copy over. The basic syntax is as follows:\n",
@@ -549,6 +535,7 @@
     }
    ],
    "source": [
+    "prompt = build_prompt(query, search_results)\n",
     "print(prompt)"
    ]
   },
